--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -1,6 +1,10 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --vermelho: #c63434
+  --cinzaI: #333333;
+  --cinzaII: #505050;
+  --branco: #eeeeee;
+  --brancoII: #efefef;
+  --brancoIII: #d9d9d9;
 }
 
 @media (prefers-color-scheme: dark) {
