--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --vermelho: #c63434
+  --vermelho: #c63434;
   --cinzaI: #333333;
   --cinzaII: #505050;
   --branco: #eeeeee;
@@ -7,23 +7,10 @@
   --brancoIII: #d9d9d9;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -34,13 +21,3 @@ body {
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
