--- a/src/style/login.module.css
+++ b/src/style/login.module.css
@@ -14,7 +14,7 @@
   text-align: center;
   align-items: center;
   padding: 1rem;
-  width: 30%;
+  width: 35%;
   height: 100%;
   background-color: var(--vermelho);
 }
@@ -49,24 +49,30 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width:60%;
+  width:70%;
 }
 
 .direita > p{
-  font-size: 1.8rem;
-  color: var(--brancoIII);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.9rem;
+  color: var(--cinzaII);
+  width: 100%;
 }
 
 .containerForm{
   background-color: var(--brancoIII);
-  padding: 2rem;
-  border-radius: 20px;
+  border-radius: 15px;
+  padding: 3rem;
 }
 
 .form{
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
 }
 
 .form > div{
@@ -75,11 +81,63 @@
 }
 
 .form >div > label{
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   color: var(--cinzaI);
 }
 
+.form >div > input{ 
+  color: var(--cinzaI);
+  background-color: var(--branco);
+  border:  none !important;
+  border-color: transparent !important;
+  border-radius: 10px;
+  width: 55rem;
+  height: 3rem;
+  padding: 1rem;
+  font-size: 1rem;
+  outline: none;
+}
+
+.form >div > input::placeholder{
+  color: var(--brancoIII);
+  font-size: 1.3rem;
+  text-align: start;
+}
 
 .footerForm{
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 2.2rem;
+  width: 55rem;
+}
+
+.footerForm > p {
+  font-size: 1.2rem;
+}
+
+.footerForm > p > a{
+  gap: 0.5rem;
+  color: var(--vermelho);
+}
+
+.footerForm > p > a:hover{
+  cursor: pointer;
+  color: var(--vermelho-hover);
+}
+
+.btnCriarConta{
+  background-color: var(--vermelho);
+  color: var(--branco);
+  border: none;
+  padding: 1.2rem 3rem;
+  border-radius: 15px;
+  font-size: 1.2rem;
+  transition: background-color 0.1s ease-in-out;
+  font-weight: 700;
+}
+
+.btnCriarConta:hover{
+  cursor: pointer;
+  background-color: var(--vermelho-hover);
 }
