--- a/src/style/login.module.css
+++ b/src/style/login.module.css
@@ -34,13 +34,17 @@
   font-size: 1.2rem;
 }
 
+
 .logo {
   display: flex;
+  align-items: center;
   margin: 1rem;
-  width: 10%;
+  width: 100%;
+
 }
 
 .logo> p{
+  text-align: center;
   font-size: 1.5rem;
 }
 
@@ -64,7 +68,7 @@
 .containerForm{
   background-color: var(--brancoIII);
   border-radius: 15px;
-  padding: 3rem;
+  padding: 1rem 2rem;
 }
 
 .form{
@@ -72,7 +76,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 4rem;
+  gap: 2rem;
 }
 
 .form > div{
@@ -81,7 +85,7 @@
 }
 
 .form >div > label{
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   color: var(--cinzaI);
 }
 
@@ -91,8 +95,8 @@
   border:  none !important;
   border-color: transparent !important;
   border-radius: 10px;
-  width: 55rem;
-  height: 3rem;
+  width: 40rem;
+  height: 2.5rem;
   padding: 1rem;
   font-size: 1rem;
   outline: none;
@@ -100,7 +104,7 @@
 
 .form >div > input::placeholder{
   color: var(--brancoIII);
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   text-align: start;
 }
 
@@ -109,11 +113,11 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 2.2rem;
-  width: 55rem;
+  width: 40rem;
 }
 
 .footerForm > p {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .footerForm > p > a{
@@ -130,9 +134,9 @@
   background-color: var(--vermelho);
   color: var(--branco);
   border: none;
-  padding: 1.2rem 3rem;
+  padding: 1.2rem 2rem;
   border-radius: 15px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   transition: background-color 0.1s ease-in-out;
   font-weight: 700;
 }
